new Readme + env

--- a/TD_Machine_Learning.ipynb
+++ b/TD_Machine_Learning.ipynb
@@ -4,10 +4,16 @@
             "cell_type": "markdown",
             "source": [
                 "# Machine-Learning TD\n",
-                "By Corentin Meyer, PhD Student @ CSTB - iCube, 04/10 ESBS\n",
+                "By Corentin Meyer, PhD Student @ CSTB - iCube, 04/10 ESBS\n"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# PART 1: Import, format and split the data\n",
                 "\n",
-                "\n",
-                "# The Data that we will use\n",
+                "## The Data that we will use\n",
                 "## [Stroke Prediction Dataset](https://www.kaggle.com/fedesoriano/stroke-prediction-dataset)\n",
                 "### **Context**\n",
                 "According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately 11% of total deaths.\n",
@@ -27,13 +33,6 @@
                 "11. **smoking_status**: \"formerly smoked\", \"never smoked\", \"smokes\" or \"Unknown\"*\n",
                 "12. **stroke**: 1 if the patient had a stroke or 0 if not  \n",
                 "* Note: \"Unknown\" in smoking_status means that the information is unavailable for this patient"
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "# PART 1: Import, format and split the data"
             ],
             "metadata": {}
         },
