Added data formating + downsampling + randomforest

--- a/TD_Machine_Learning.ipynb
+++ b/TD_Machine_Learning.ipynb
@@ -75,41 +75,34 @@
             "source": [
                 "columns_nothing = [\"hypertension\", \"heart_disease\", \"stroke\"]\n",
                 "columns_categorical = [\"gender\",\"ever_married\", \"work_type\", \"Residence_type\", \"smoking_status\"]\n",
-                "columns_numeric = [\"age\", \"avg_glucose_level\",\"bmi\"]"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
+                "columns_numeric = [\"age\", \"avg_glucose_level\",\"bmi\"]\n",
+                "\n",
                 "X_nothing_to_do = df[columns_nothing]\n",
-                "X_nothing_to_do = X_nothing_to_do.to_numpy()"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
+                "X_nothing_to_do = X_nothing_to_do.to_numpy()\n",
+                "\n",
+                "# Handle Categorial data to numeric (one hot encoding)\n",
                 "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
                 "enc = OneHotEncoder()\n",
                 "X_cat = df[columns_categorical]\n",
-                "X_cat_onehot = enc.fit_transform(X).toarray()\n",
-                "X_cat_columns_onehot = enc.get_feature_names()"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "source": [
+                "X_cat_onehot = enc.fit_transform(X_cat).toarray()\n",
+                "X_cat_columns_onehot = enc.get_feature_names()\n",
+                "\n",
+                "# Handle Numeric data (scaling)\n",
                 "X_num = df[columns_numeric]\n",
                 "X_num_scaled = StandardScaler().fit_transform(X_num)\n",
-                "X_num_columns_scaled = X_num.columns"
+                "X_num_columns_scaled = X_num.columns\n",
+                "\n",
+                "array_data = np.concatenate((X_cat_onehot, X_num_scaled, X_nothing_to_do), axis=1)\n",
+                "\n",
+                "# Handle NaN values (Multivariate imputer that estimates each feature from all the others)\n",
+                "from sklearn.experimental import enable_iterative_imputer\n",
+                "from sklearn.impute import IterativeImputer\n",
+                "imp_mean = IterativeImputer(random_state=777)\n",
+                "imp_mean.fit(array_data)\n",
+                "array_data = imp_mean.transform(array_data)\n",
+                "\n",
+                "import numpy as np\n",
+                "df_data  = pd.DataFrame(data=array_data, columns=list(X_cat_columns_onehot) + list(X_num_columns_scaled) + columns_nothing)"
             ],
             "outputs": [],
             "metadata": {}
@@ -118,9 +111,11 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "import numpy as np\n",
-                "array_data = np.concatenate((X_cat_onehot, X_num_scaled, X_nothing_to_do), axis=1)\n",
-                "pd.DataFrame(data=array_data, columns=list(X_cat_columns_onehot) + list(X_num_columns_scaled) + columns_nothing)"
+                "from sklearn.model_selection import train_test_split\n",
+                "\n",
+                "X = array_data[:,:-1]\n",
+                "Y = array_data[:,-1]\n",
+                "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.4, random_state=777)"
             ],
             "outputs": [],
             "metadata": {}
@@ -130,6 +125,51 @@
             "source": [
                 "# PART 2: Create your machine-learning model"
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "from sklearn.ensemble import RandomForestClassifier\n",
+                "from sklearn.model_selection import train_test_split\n",
+                "from sklearn.metrics import plot_confusion_matrix\n",
+                "import matplotlib.pyplot as plt\n",
+                "\n",
+                "clf = RandomForestClassifier(class_weight='balanced').fit(X_train, y_train)\n",
+                "print(clf.score(X_test, y_test))\n",
+                "plot_confusion_matrix(clf, X_test, y_test)  \n",
+                "plt.show()  "
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Indicies of each class' observations\n",
+                "# Source: https://chrisalbon.com/code/machine_learning/preprocessing_structured_data/handling_imbalanced_classes_with_downsampling/\n",
+                "np.random.seed(777)\n",
+                "i_class0 = np.where(Y == 0)[0]\n",
+                "i_class1 = np.where(Y == 1)[0]\n",
+                "# Number of observations in each class\n",
+                "n_class0 = len(i_class0)\n",
+                "n_class1 = len(i_class1)\n",
+                "# For every observation of class 0, randomly sample from class 1 without replacement\n",
+                "i_class0_downsampled = np.random.choice(i_class0, size=n_class1, replace=False)\n",
+                "# Join together class 0's target vector with the downsampled class 1's target vector\n",
+                "Y_down = np.hstack((Y[i_class0_downsampled], Y[i_class1]))\n",
+                "X_down = np.vstack((X[i_class0_downsampled], X[i_class1]))\n",
+                "\n",
+                "# Retrain now with sampled-down data\n",
+                "X_train_down, X_test_down, y_train_down, y_test_down = train_test_split(X_down, Y_down, test_size=0.4, random_state=777)\n",
+                "clf_down = RandomForestClassifier(class_weight='balanced', random_state=777).fit(X_train_down, y_train_down)\n",
+                "print(clf_down.score(X_test_down, y_test_down))\n",
+                "plot_confusion_matrix(clf_down, X_test_down, y_test_down)  \n",
+                "plt.show()  "
+            ],
+            "outputs": [],
             "metadata": {}
         },
         {
