--- a/TD_Machine_Learning.ipynb
+++ b/TD_Machine_Learning.ipynb
@@ -73,6 +73,10 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
+                "import numpy as np\n",
+                "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+                "from sklearn.experimental import enable_iterative_imputer\n",
+                "from sklearn.impute import IterativeImputer\n",
                 "columns_nothing = [\"hypertension\", \"heart_disease\", \"stroke\"]\n",
                 "columns_categorical = [\"gender\",\"ever_married\", \"work_type\", \"Residence_type\", \"smoking_status\"]\n",
                 "columns_numeric = [\"age\", \"avg_glucose_level\",\"bmi\"]\n",
@@ -81,7 +85,6 @@
                 "X_nothing_to_do = X_nothing_to_do.to_numpy()\n",
                 "\n",
                 "# Handle Categorial data to numeric (one hot encoding)\n",
-                "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
                 "enc = OneHotEncoder()\n",
                 "X_cat = df[columns_categorical]\n",
                 "X_cat_onehot = enc.fit_transform(X_cat).toarray()\n",
@@ -95,13 +98,11 @@
                 "array_data = np.concatenate((X_cat_onehot, X_num_scaled, X_nothing_to_do), axis=1)\n",
                 "\n",
                 "# Handle NaN values (Multivariate imputer that estimates each feature from all the others)\n",
-                "from sklearn.experimental import enable_iterative_imputer\n",
-                "from sklearn.impute import IterativeImputer\n",
                 "imp_mean = IterativeImputer(random_state=777)\n",
                 "imp_mean.fit(array_data)\n",
                 "array_data = imp_mean.transform(array_data)\n",
                 "\n",
-                "import numpy as np\n",
+                "\n",
                 "df_data  = pd.DataFrame(data=array_data, columns=list(X_cat_columns_onehot) + list(X_num_columns_scaled) + columns_nothing)"
             ],
             "outputs": [],
@@ -177,6 +178,76 @@
             "source": [
                 "# PART 3: Evaluate your model"
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Calculate all relevant metrics for a binary classification\n",
+                "# Accuracy, Balanced Accuracy, F1 Score, Sensitivity (Recall), Specificity, Precision, TP TN FP FN\n",
+                "# Also plot the ROC Curve and the Precision-Recall curve and AUC.\n",
+                "from sklearn.metrics import accuracy_score\n",
+                "from sklearn.metrics import balanced_accuracy_score\n",
+                "from sklearn.metrics import recall_score\n",
+                "from sklearn.metrics import confusion_matrix\n",
+                "from sklearn.metrics import precision_score\n",
+                "from sklearn.metrics import f1_score\n",
+                "from sklearn.metrics import precision_recall_curve, average_precision_score, plot_precision_recall_curve\n",
+                "from sklearn.metrics import roc_curve, auc\n",
+                "\n",
+                "def roc_plot_single(fpr, tpr, roc_auc):\n",
+                "\t#Plot the ROC Curve and include AUC in figure.\n",
+                "\tplt.figure()\n",
+                "\tlw = 2\n",
+                "\tplt.plot(fpr, tpr, color='darkorange',lw=lw, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+                "\tplt.plot([0, 1], [0, 1], color='navy', lw=lw, linestyle='--')\n",
+                "\tplt.xlim([0.0, 1.0])\n",
+                "\tplt.ylim([0.0, 1.05])\n",
+                "\tplt.xlabel('False Positive Rate')\n",
+                "\tplt.ylabel('True Positive Rate')\n",
+                "\tplt.title('Receiver operating characteristic example')\n",
+                "\tplt.legend(loc=\"lower right\")\n",
+                "\tplt.show()\n",
+                "\n",
+                "\n",
+                "y_pred = clf_down.predict(X_test_down)\n",
+                "probas = clf_down.predict_proba(X_test_down)\n",
+                "down_weight = [6.24 if x == 1 else 1 for x in y_test_down]\n",
+                "\n",
+                "#calculate and store evaluation metrics\n",
+                "tn, fp, fn, tp = confusion_matrix(y_test_down, y_pred).ravel()\n",
+                "\n",
+                "ac = accuracy_score(y_test_down, y_pred)\n",
+                "bac = balanced_accuracy_score(y_test_down, y_pred, sample_weight=down_weight)\n",
+                "re = recall_score(y_test_down, y_pred)\n",
+                "pr = precision_score(y_test_down, y_pred)\n",
+                "f1 = f1_score(y_test_down, y_pred)\n",
+                "\n",
+                "#calculate specificity\n",
+                "if tn == 0 and fp == 0:\n",
+                "    sp = 0\n",
+                "else:\n",
+                "    sp = tn/float(tn+fp)\n",
+                "\n",
+                "print(\"Balanced Accuracy:    \"+str(bac))\n",
+                "print(\"Accuracy (Standard):  \"+str(ac))\n",
+                "print(\"F1 Score:             \"+str(f1))\n",
+                "print(\"Sensitivity (Recall): \"+str(re))\n",
+                "print(\"Specificity:          \"+str(sp))\n",
+                "print(\"Precision :           \"+str(pr))\n",
+                "print(\"TP:                   \"+str(tp))\n",
+                "print(\"TN:                   \"+str(tn))\n",
+                "print(\"FP:                   \"+str(fp))\n",
+                "print(\"FN:                   \"+str(fn))\n",
+                "\n",
+                "fpr, tpr, thresholds = roc_curve(y_test_down, probas[:, 1])\n",
+                "roc_auc = auc(fpr, tpr)\n",
+                "roc_plot_single(fpr, tpr, roc_auc)\n",
+                "\n",
+                "plot_precision_recall_curve(clf_down, X_test_down, y_test_down)\n"
+            ],
+            "outputs": [],
             "metadata": {}
         },
         {
