Update code and readme for google collab

--- a/TD_Machine_Learning.ipynb
+++ b/TD_Machine_Learning.ipynb
@@ -455,6 +455,9 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
+                "from sklearn.model_selection import StratifiedKFold\n",
+                "from sklearn.model_selection import cross_val_score\n",
+                "\n",
                 "# Create a cv variable using the StratifiedKFold with 5 folds.\n",
                 "cv = StratifiedKFold(n_splits=5, shuffle=True)\n",
                 "# Use the cross_val_score with your clf_down model, your train data, cv varaible and select f1 as scoring method.\n",
@@ -502,6 +505,16 @@
             "source": [
                 "![Hyerparameters Tuning](https://i.imgur.com/3plYcqn.png)"
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# If you are using Google Colab, uncomment the next line starting with ! and run it to install optuna\n",
+                "# !pip install optuna"
+            ],
+            "outputs": [],
             "metadata": {}
         },
         {
