--- a/TD_Machine_Learning.ipynb
+++ b/TD_Machine_Learning.ipynb
@@ -11,7 +11,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# PART 1: Import, format and split the data\n",
+                "# PART 1: Exploration, formating and data split\n",
                 "\n",
                 "## The Data that we will use\n",
                 "## [Stroke Prediction Dataset](https://www.kaggle.com/fedesoriano/stroke-prediction-dataset)\n",
@@ -39,7 +39,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## **Tasks:**\n",
+                "## **Tasks: Data Exploration**\n",
                 "1. Import the data (and set the dataframe index to the ID column)\n",
                 "2. Print the shape of the dataset and the first 5 lines\n",
                 "3. Calculate the ratio stroke/non-stroke  \n",
@@ -108,7 +108,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## **Tasks**\n",
+                "## **Tasks: Data Formating**\n",
                 "You will now do the pre-processing of data.\n",
                 "For each type of object you will have to process them in a usable format for ML algorithm.\n",
                 "\n",
@@ -175,7 +175,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## **Tasks**\n",
+                "## **Tasks: Data Train/Test Spliting**\n",
                 "Now you can split the data between training and testing data.\n",
                 "\n",
                 "## **Questions**\n",
@@ -216,7 +216,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## **Tasks:**\n",
+                "## **Tasks: Choose a model and do basic evaluation**\n",
                 "Select from scikit-learn a model and train it (fit) with the train data. Then calculate the accuracy of the model on the test data. Plot the confusion matrix of the test data classification.\n",
                 "\n",
                 "## **Questions:**\n",
@@ -251,7 +251,7 @@
                 "\n",
                 "# Using the .score() method of clf, print its accuracy on x_test, y_test\n",
                 "print()\n",
-                "# Plot the confusion matrix using plot_confusion_matrix with clf, x_test, y_test)\n"
+                "# Plot the confusion matrix using plot_confusion_matrix with clf, x_test, y_test)"
             ],
             "outputs": [],
             "metadata": {}
@@ -259,13 +259,14 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## **Tasks:**\n",
+                "## **Tasks: Correct the previous issue**\n",
                 "You will now try to downsample your majority class to the level of minority class to have a 50/50 ratio and re-do a train/test split.  \n",
                 "Then you will re-train a new model with the new ratio-corrected data and get accuracy+confusion matrix plot.\n",
-                "\n",
+                "Don't only predict the class, but also show the prediction probability for all data in the test set !\n",
                 "## **Questions**\n",
                 "1. What accuracy-score do you get with the new model and what conclusion can you take.\n",
-                "2. What do you observe on the confusion matrix and what conclusion can you take."
+                "2. What do you observe on the confusion matrix and what conclusion can you take.\n",
+                "3. Did you managed to print the probability of each prediction ? What's the shape of the prediction probability output ? Is there a high variance between the different test entries in probability ?"
             ],
             "metadata": {}
         },
@@ -305,7 +306,9 @@
                 "\n",
                 "# Calculate its accuracy using the .score() methods on X_test_down, y_test_down\n",
                 "print()\n",
-                "# Plot the confusion matrix as before, but with clf_down, X_test_down, y_test_down\n"
+                "# Plot the confusion matrix as before, but with clf_down, X_test_down, y_test_down\n",
+                "\n",
+                "# Print the prediction probablity of the first 10 test data points using .predict_proba of the model.\n"
             ],
             "outputs": [],
             "metadata": {}
@@ -320,7 +323,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "## **Tasks:**\n",
+                "## **Tasks: See all common metrics and evalute both models !**\n",
                 "In this last part you will have to calculate all relevant metrics for a binary classification to compare your two models.  \n",
                 "Make a table containing the results for both models in terms of: accuracy, balance accuracy, F1 Score, sensitivity (recall), specificity, Precision and confusion matrix data (True Pos., True Neg., False Pos., False Neg.)\n",
                 "\n",
@@ -380,7 +383,7 @@
                 "\tresults = get_all_metrics(\"...\") # Fill\n",
                 "\tresults_down = get_all_metrics(\"...\") # Fill\n",
                 "\tdf = pd.DataFrame([[i for i in results], [j for j in results_down]], columns=[\"Balanced-Accuracy\", \"Accuracy\", \"F1-Score\", \"Sensitivity (Recall)\", \"Specificity\", \"Precision\", \"TP\",\" TN\", \"FP\", \"FN\"], index=[\"CLF\",\"CLF DownSampled\"])\n",
-                "\treturn df\n"
+                "\treturn df"
             ],
             "outputs": [],
             "metadata": {}
